add loading to bike form and adjust edit text

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,9 @@
         <item name="android:backgroundTint">@color/colorAccent</item>
     </style>
 
+    <style name="textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/colorPrimary</item>
+        <item name="android:textColorHint">#000</item>
+    </style>
+
 </resources>
