--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#2A9698</color>
     <color name="tintColor">#037F83</color>
     <color name="colorPrimaryDark">#ffffff</color>
@@ -13,4 +13,5 @@
     <color name="green">#388e3c</color>
     <color name="blue">#1976d2</color>
     <color name="red">#C24439</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorPrimary</color>
 </resources>
