authentication tests initial configuration

--- a/app/src/main/res/layout/fragment_email_validation.xml
+++ b/app/src/main/res/layout/fragment_email_validation.xml
@@ -10,7 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container"
+            android:id="@+id/fragmentEmailValidationContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -31,6 +31,7 @@
                 android:inputType="textEmailAddress"
                 android:selectAllOnFocus="true"
                 android:text="@={viewmodel.emailField}"
+                android:imeOptions="actionDone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
