fix camelCase ids

--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -16,7 +16,7 @@
             tools:context=".presentation.authentication.PasswordRecoveryFragment">
 
         <TextView
-                android:id="@+id/header_text"
+                android:id="@+id/headerText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
@@ -43,7 +43,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/save"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header_text"
+                app:layout_constraintTop_toBottomOf="@+id/headerText"
                 app:layout_constraintVertical_chainStyle="packed" />
 
         <Button
@@ -60,7 +60,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/username" />
 
         <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/animation_view"
+                android:id="@+id/animationView"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:scaleType="fitCenter"
