--- a/app/src/main/res/layout/loading_dialog_animation.xml
+++ b/app/src/main/res/layout/loading_dialog_animation.xml
@@ -8,7 +8,7 @@
               android:layout_height="wrap_content">
 
     <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animation_view"
+            android:id="@+id/animationView"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:scaleType="fitCenter"
