remove blank lines and update dimens

--- a/app/src/main/res/layout/activity_bike_form.xml
+++ b/app/src/main/res/layout/activity_bike_form.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:theme="@style/AppTheme.AppBarOverlay"
-                    android:elevation="2dp"
+                    android:elevation="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -59,7 +59,7 @@
                     android:layout_height="248dp"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
-                    android:padding="8dp"
+                    android:padding="@dimen/padding_small"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:scaleType="center"
                     android:src="@drawable/ic_add_a_photo"
@@ -146,7 +146,7 @@
                     android:layout_marginBottom="@dimen/margin_medium"
                     android:enabled="@{viewModel.valid}"
                     android:onClick="@{()-> viewModel.registerBicycle()}"
-                    android:padding="16dp"
+                    android:padding="@dimen/padding_medium"
                     android:textStyle="bold"
                     android:text="@string/btn_register_bicycle"
                     app:layout_constraintBottom_toBottomOf="parent"
