--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,9 @@
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_big">32dp</dimen>
 
+    <dimen name="padding_small">8dp</dimen>
+    <dimen name="padding_medium">16dp</dimen>
+
     <dimen name="fragment_horizontal_margin">24dp</dimen>
     <dimen name="fragment_vertical_margin">24dp</dimen>
 
