--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/passwordRecoveryContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.authentication.PasswordRecoveryFragment">
