--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/loginContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/loginContainer"
-        tools:context=".presentation.login.LoginActivity">
+        tools:context=".presentation.welcome.WelcomeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
@@ -19,37 +18,37 @@
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:title="@string/app_name"
-                app:titleTextColor="@color/dark_gray"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"/>
+                android:background="@color/white"
+                app:title="@string/app_name"
+                app:titleTextColor="@color/dark_gray" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-            android:layout_width="160dp"
             android:id="@+id/bpr_logo"
-            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/login_button"
-            android:layout_height="160dp"
-            android:src="@drawable/logo"/>
+            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
 
     <Button
-            android:text="Login"
+            android:id="@+id/loginButton"
             android:layout_width="wrap_content"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:id="@+id/login_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/bpr_logo"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:background="@color/colorPrimary"
+            android:text="@string/action_sign_in"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bpr_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
