--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,48 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".presentation.main.DashboardFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".presentation.main.DashboardFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <TextView
                 android:id="@+id/tripsTitle"
-                android:text="Viagens"
-                android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Viagens"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="20sp" android:layout_marginStart="16dp"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/tripsChart"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
-                app:layout_constraintTop_toBottomOf="@id/tripsTitle"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                app:layout_constraintTop_toBottomOf="@id/tripsTitle">
 
         </com.github.mikephil.charting.charts.LineChart>
 
         <TextView
-                android:text="Proporção de gênero"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tripsChart"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
-                android:textSize="20sp"/>
+                android:layout_marginTop="8dp"
+                android:text="Proporção de gênero"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tripsChart" />
 
 
         <com.github.mikephil.charting.charts.PieChart
@@ -51,36 +53,40 @@
                 android:layout_height="200dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintStart_toStartOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="parent">
-        </com.github.mikephil.charting.charts.PieChart>
+                app:layout_constraintTop_toBottomOf="@+id/textView"></com.github.mikephil.charting.charts.PieChart>
 
         <TextView
-                android:text="Disponibilidade bicicletas"
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView2"
+                android:layout_marginTop="24dp"
+                android:text="Disponibilidade bicicletas"
                 android:textSize="20sp"
-                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/genderChart"
-                app:layout_constraintStart_toStartOf="@+id/genderChart"/>
+                app:layout_constraintStart_toStartOf="@+id/genderChart"
+                app:layout_constraintTop_toBottomOf="@+id/genderChart" />
 
         <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/availableBikesChart"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
         <TextView
+                android:id="@+id/tripsCountLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tripsCountLabel" app:layout_constraintEnd_toEndOf="@+id/tripsChart"
-                app:layout_constraintBottom_toTopOf="@+id/tripsChart" android:layout_marginBottom="8dp"
-                tools:text="Total: 850 viagens"/>
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/tripsChart"
+                app:layout_constraintEnd_toEndOf="@+id/tripsChart"
+                tools:text="Total: 850 viagens" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
