create flow to add new user

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -34,6 +34,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <ScrollView
+                android:id="@+id/scrollContainer"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -46,24 +47,13 @@
                     android:layout_height="wrap_content"
                     tools:context=".presentation.adduser.AddUserActivity">
 
-                <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:indeterminate="true"
-                        android:visibility="gone"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
                 <ImageView
                         android:id="@+id/profileImageView"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginStart="@dimen/margin_small"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:layout_marginEnd="@dimen/margin_small"
                         android:padding="6dp"
                         app:errorDrawable="@{@drawable/iconfinder_user_profile_imagee}"
                         app:imagePathOrUrl="@{viewModel.userImageProfile}"
@@ -77,9 +67,9 @@
                         style="@style/textInputLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginStart="@dimen/margin_medium"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:layout_marginEnd="@dimen/margin_medium"
                         android:hint="@string/complete_name"
                         app:errorUserCompleteName="@{viewModel.userCompleteName}"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +90,7 @@
                         android:id="@+id/genderRadioGroup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="@dimen/margin_medium"
                         android:layout_marginTop="24dp"
                         app:layout_constraintLeft_toLeftOf="@id/ilCompleteName"
                         app:layout_constraintTop_toBottomOf="@id/ilCompleteName"
@@ -141,9 +131,9 @@
                         style="@style/textInputLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginStart="@dimen/margin_medium"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:layout_marginEnd="@dimen/margin_medium"
                         android:hint="@string/add_user_address_hint"
                         app:errorUserAddress="@{viewModel.userAddress}"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -162,7 +152,7 @@
                         android:id="@+id/ivResidenceProof"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/margin_medium"
                         android:padding="6dp"
                         app:errorDrawable="@{@drawable/iconfinder_document}"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentResidence}"
@@ -176,9 +166,9 @@
                         style="@style/textInputLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginStart="@dimen/margin_medium"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:layout_marginEnd="@dimen/margin_medium"
                         android:hint="@string/add_user_cpf_hint"
                         app:errorUserCpf="@{viewModel.userDocument}"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -206,7 +196,7 @@
                         android:id="@+id/ivFrontDocument"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/margin_medium"
                         android:padding="6dp"
                         app:errorDrawable="@{@drawable/iconfinder_id_profile_female}"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentFront}"
@@ -228,7 +218,7 @@
                         android:id="@+id/ivBackDocument"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/margin_medium"
                         android:padding="6dp"
                         app:errorDrawable="@{@drawable/iconfinder_document}"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentBack}"
@@ -251,12 +241,14 @@
                         style="@style/bprButton"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="32dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginStart="@dimen/margin_small"
+                        android:layout_marginTop="@dimen/margin_big"
+                        android:layout_marginEnd="@dimen/margin_small"
+                        android:layout_marginBottom="@dimen/margin_small"
+                        android:padding="@dimen/padding_medium"
+                        android:textStyle="bold"
                         android:onClick="@{() -> viewModel.registerUser()}"
-                        android:text="Adicionar pessoa"
+                        android:text="@string/btn_add_user"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
